assets/css/style.css
html {
    scroll-behavior: smooth;
}

body {
    font-size: 16px;
}

/* Managing Bootstrap display and heading class for mobiles */
@media (max-width: 575.98px) {
    .h1 {
        font-size: 1.75rem;
        line-height: 1.0;
    }
    .h2 {
        font-size: 1.5rem;
        line-height: 1.0;
    }
    .display-2 {
        font-size: 2.5rem;
        font-weight: 300;
        line-height: 1.0;
    }
    .display-3 {
            font-size: 2.25rem;
            font-weight: 300;
            line-height: 1.0;
        }
    .display-4 {
            font-size: 1.75rem;
            font-weight: 300;
            line-height: 1.0;
        }
}

/* NAVBAR SECTION */
/* Logo size was adjusted to stop Nav button from moving underneath it on small screens thus always staying on the right */
.logo {
    width: 125px;
}

@media (min-width: 768px) {
    .logo {
        width: 230px;
    }
}

/* Added some padding to Nav links for breathing space on small screens */
.nav-item {
    text-transform: uppercase;
    padding-left: 10px;
    border-bottom: 1px solid gray;
}

@media (min-width: 992px) {
    .nav-item {
        padding: 10px 10px;
        border-bottom: none;
    }
}

/* Added colors and border radius (on big screens) to make nav buttons look nicer when hovered over */
@media (min-width: 992px) {
    .nav-item:hover {
        border-radius: 20%;
    }
}

.nav-item-cold:hover {
    background-color: #369;
}

.nav-item-hot:hover {
    background-color: #e53c37;
}

.navbar-nav .nav-item:hover .nav-link {
    color: #fff;
}

/*Added and styled social buttons to navbar */
.navbar-nav .nav-social-cold:hover .social {
    color: #369;
}

.navbar-nav .nav-social-hot:hover .social {
    color: #e53c37;
}

/* HOME SECTION */
/* Added background picture and parallax to beautify the page */
#home {
    background: url("../images/peter.jpg") no-repeat center center fixed;
    position: relative;
    min-height: 100vh;
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
}

/* Added jumbotron to enhance main message on home page */
.jumbotron {
    background-color: transparent;
}

.badge-primary {
    display: inline;
    background-color: #e53c37;
}

@media (min-width: 768px) {
    .head-word {
       padding-left: 25px;
       padding-right: 25px;
       }
}
/* Added buttons & styled them */
.blue-btn-link {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    font-size: 1.3rem;
    padding: 7px;
}

/* SERVICES SECTION */
/* Styled paragraph to center it and change its size on bigger screens*/
.intro-word {
    text-align: center;
}

@media (min-width: 768px) {
    .intro-word {
        font-size: 1.2rem;
    }
}
/* Increased size of icons from Fontawesome so make them stand out and adding some breathing space */
.services-icon {
    margin: 10px;
    font-size: 2.5rem;
}
/* Deleted list decoration */
.services-list {
    list-style: none;
}

/* Made a list stand out */
.services-list-item {
    font-weight: 500;
    padding: 3px;
    color: #000;
    text-align: left;
}

/* Added buttons & styled them */
.red-btn-link {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    font-size: 1.3rem;
    background-color: #e53c37;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
}

/* ABOUT SECTION */
/* Added background picture and parallax to beautify the page */
#about {
    background: url("../images/tap.jpg") no-repeat center right fixed;
    background-repeat: no-repeat;
    position: relative;
    min-height: 80vh;
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
}

/* Style copied and ajusted to the site needs - more in README*/
#testimonials {
	position: relative;
}
#testimonials::after {
	content: "";
	width: 130px;
	position: absolute;
	margin: 0 auto;
	height: 3px;
	background: #e53c37;
	left: 0;
	right: 0;
	bottom: -10px;
}
.carousel-inner .carousel-item .img-box{
	width: 135px;
	height: 135px;
}
.carousel-control-prev{
	left: -100px;
}
.carousel-control-next{
	right: -100px;
}
.carousel-indicators{
    top: 350px;
}
.review-text {
    padding-top: 16px;
}
@media (min-width: 320px) and (max-width: 640px) {
	.carousel-inner .carousel-item p{
		font-size: 14px;
	}
	.carousel-control-prev{
		left: -40px;
	}
	.carousel-control-next{
		right: -40px;
	}
 	.carousel-indicators{
        top: 415px;
    }
    .review-text {
        padding-top: 5px;
    }
}

/* FAQ SECTION */
/* Styled cards look */
.card-footer .fa-phone {
    -webkit-transform: rotate(90deg);
            transform: rotate(90deg);
    margin-right: 10px;
}

.card {
    min-height: 300px;
}

/*Media to amend difference in heights for Tablets such as iPod */
@media (min-width: 768px) {
    .card {
        min-height: 593px;
    }
}

/*Media to amend difference in heights for bigger Tablets such as iPod Pro */
@media (min-width: 992px) {
    .card {
        min-height: 434px;
    }
}

/*Media to amend difference in heights for desktops */
@media (min-width: 1280px) {
    .card {
        min-height: 381px;
    }
}


/* CONTACT SECTION */
/* Added background picture and parallax to beautify the page */
#contact {
    background: url("../images/contact.jpg") no-repeat center center fixed;
    background-repeat: no-repeat;
    position: relative;
    min-height: 60vh;
    background-size: cover;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
}

/* FOOTER SECTION */
/*General styling to the footer - some top breathing space, colors etc.*/
footer {
    background-color: #e0e0e0;
}
/*Added social media links that change look when hovered over*/
.social-media {
    list-style-type: none;
    text-align: center;
    padding: 0 0;
}

.social-media-link {
    display: inline;
    padding-right: 7px;
    padding-left: 7px;
}

.social-media-link a i {
    width: 30px;
    height: 30px;
    border-radius: 25%;
    text-align: center;
    padding: 12px 0;
    color: #fff;
    background-color: #000;
    vertical-align: middle;
    font-size: 13px;
    line-height: 7px;
    transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -webkit-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
}

.social-media-link .fa-google-plus-g:hover {
    color: #e53c37;
    background-color: transparent;
    font-size: 200%;
    padding-top: 15px;
}

.social-media-link .fa-facebook-square:hover {
    color: #369;
    background-color: #fff;
    font-size: 200%;
    padding-top: 15px;
}

.social-media-link .fa-phone:hover,
.social-media-link .fa-envelope:hover {
    font-size: 200%;
    padding-top: 15px;
    color: #000;
    background-color: transparent;
}

